vlib/v/checker/tests/incorrect_name_module.out
vlib/v/checker/tests/incorrect_name_module.v:1:1: error: module name `_A` cannot start with `_`
    1 | module _A
      | ~~~~~~~~~