vlib/v/checker/tests/incorrect_name_module.vv
module _A

import math as _
import os
